--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "reactstrap": "^9.1.6",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
+    "swiper": "^9.2.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
